--- a/style.css
+++ b/style.css
@@ -1,10 +1,21 @@
 
 body{
+    margin: 0;
     font-family: 'Lobster', cursive;
 }
 
 h1{
-    font-size: 50px;
+    font-size: 48px;
+}
+h2{
+    font-size: 38px;
+}
+h3{
+    font-size: 28px;
+}
+p{
+    font-size: 18px;
+    color: dimgray;
 }
 
 .name-highlight{
@@ -19,4 +30,56 @@ h1{
 }
 .half-width img{
     width: 100%;
+    padding-top: 50px;
+}
+.top-banner{
+    background-image: url("images/top-banner.png");
+    background-repeat: no-repeat;
+}
+section{
+    height: 500px;
+    padding-bottom: 150px;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(45deg, #f8b59b, #fa725a);
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: rgb(209, 56, 0);
+    font-weight: 800;
+}
+.dream-area{
+    background-image: url("images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
+
+}
+#end{
+    font-size: 50px;
+
+}
+.conclusion{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 7px;
+    height: 70%;
+    background-color: rgb(255, 247, 234);
+}
+.experience-area{
+    background-image: url("images/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position: left;
+
+}
+#experience{
+    border-left: 7px solid;
+    border-image: linear-gradient(360deg, rgb(240, 119, 97), rgb(148, 39, 0));
+    border-image-slice: 1;
+}
+#responsibilities{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, rgb(113, 103, 255), rgb(10, 0, 139));
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
 }
