--- a/style.css
+++ b/style.css
@@ -36,6 +36,21 @@ p{
     background-image: url("images/top-banner.png");
     background-repeat: no-repeat;
 }
+#student{
+    font-size: 38px;
+}
+.top-box{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 7px;
+    height: 70%;
+    padding: 10px 20px;
+
+    background-color: rgb(255, 247, 234) ;
+
+    border-left: 7px solid;
+    border-image: linear-gradient(360deg, rgb(240, 119, 97), rgb(148, 39, 0));
+    border-image-slice: 1;
+}
 section{
     height: 500px;
     padding-bottom: 150px;
@@ -47,6 +62,20 @@ section{
     border-radius: 5px;
     color: rgb(209, 56, 0);
     font-weight: 800;
+}
+#dream-box{
+    
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 7px;
+    height: 300px;
+    margin-top: 100px;
+    background-color: rgb(255, 247, 234) ;
+
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, rgb(113, 103, 255), rgb(10, 0, 139));
+    border-image-slice: 1;
+
+    
 }
 .dream-area{
     background-image: url("images/dream-bg.png");
