--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 body{
     margin: 0;
-    font-family: 'Lobster', cursive;
+    font-family: 'Poppins', sans-serif;
 }
 
 h1{
@@ -67,7 +67,7 @@ section{
     
     box-shadow: 10px 10px 40px gray;
     border-radius: 7px;
-    height: 300px;
+    height: 350px;
     margin-top: 100px;
     background-color: rgb(255, 247, 234) ;
 
@@ -90,7 +90,7 @@ section{
 .conclusion{
     box-shadow: 10px 10px 40px gray;
     border-radius: 7px;
-    height: 85%;
+    height: 95%;
     background-color: rgb(255, 247, 234);
 }
 .experience-area{
